link is updated

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <p>Hello</p>
           <h2>I'm Shafkat Samin</h2>
           <h1>Frontend Developer</h1>
-          <a href="#" class="btn-1 outer-shadow hover-in-shadow">More About Me</a>
+          <a href="#about-section-id" class="btn-1 outer-shadow hover-in-shadow">More About Me</a>
         </div>
         <div class="home-img">
           <div class="img-box inner-shadow">
@@ -114,7 +114,7 @@
   <!-- home section end -->
 
   <!-- about section start -->
-  <section class="about-section section">
+  <section id="about-section-id" class="about-section section">
     <div class="container">
       <div class="row">
         <div class="section-title">
@@ -128,10 +128,14 @@
           </div>
           <!-- social links start -->
           <div class="social-links">
-            <a href="#" class="outer-shadow outer-shadow hover-in-shadow"><i class="fab fa-facebook"></i></a>
-            <a href="#" class="outer-shadow outer-shadow hover-in-shadow"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="outer-shadow outer-shadow hover-in-shadow"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="outer-shadow outer-shadow hover-in-shadow"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100002610870784"
+              class="outer-shadow outer-shadow hover-in-shadow"><i class="fab fa-facebook"></i></a>
+            <a href="https://github.com/Samin1615088" class="outer-shadow outer-shadow hover-in-shadow"><i
+                class="fab fa-github"></i></a>
+            <a href="https://medium.com/mdshafkatsamin" class="outer-shadow outer-shadow hover-in-shadow"><i
+                class="fab fa-medium"></i></a>
+            <a href="https://www.linkedin.com/in/mdshafkatsamin/" class="outer-shadow outer-shadow hover-in-shadow"><i
+                class="fab fa-linkedin"></i></a>
           </div>
           <!-- social links end -->
         </div>
@@ -142,7 +146,7 @@
           <p>Expertise in developing web pages using React.js, HTML5, CSS3, Bootstrap, SASS, Object-Oriented Javascript,
             ES6, Java, JSON. Good understanding of Document Object Model and DOM Functions.</p>
           <a href="cv.pdf" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
-          <a href="#" class="btn-1 outer-shadow hover-in-shadow">Hire Me</a>
+          <a href="#contact-section-id" class="btn-1 outer-shadow hover-in-shadow">Hire Me</a>
         </div>
       </div>
       <!-- about tabs start -->
@@ -701,7 +705,7 @@
   <!-- TODO: TESTIMONIAL END-->
 
   <!-- contact section start -->
-  <section class="contact-section section">
+  <section id="contact-section-id" class="contact-section section">
     <div class="container">
       <div class="row">
         <div class="section-title">
