blog is comming added

--- a/index.html
+++ b/index.html
@@ -128,14 +128,14 @@
           </div>
           <!-- social links start -->
           <div class="social-links">
-            <a href="https://www.facebook.com/profile.php?id=100002610870784"
-              class="outer-shadow outer-shadow hover-in-shadow"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.linkedin.com/in/mdshafkatsamin/" class="outer-shadow outer-shadow hover-in-shadow"><i
+                class="fab fa-linkedin"></i></a>
             <a href="https://github.com/Samin1615088" class="outer-shadow outer-shadow hover-in-shadow"><i
                 class="fab fa-github"></i></a>
             <a href="https://medium.com/mdshafkatsamin" class="outer-shadow outer-shadow hover-in-shadow"><i
                 class="fab fa-medium"></i></a>
-            <a href="https://www.linkedin.com/in/mdshafkatsamin/" class="outer-shadow outer-shadow hover-in-shadow"><i
-                class="fab fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100002610870784"
+              class="outer-shadow outer-shadow hover-in-shadow"><i class="fab fa-facebook"></i></a>
           </div>
           <!-- social links end -->
         </div>
@@ -703,6 +703,19 @@
 
   <!-- TODO: TESTIMONIAL START-->
   <!-- TODO: TESTIMONIAL END-->
+
+  <!-- blogs section start -->
+
+  <!-- blogs section end -->
+  <section class="blog-section section">
+    <div class="container">
+      <div class="row">
+        <div class="section-title">
+          <h2 data-heading="blogs">Coming Soon.. ..</h2>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- contact section start -->
   <section id="contact-section-id" class="contact-section section">
