projects is implemented

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
           <div class="portfolio-item-inner outer-shadow">
             <div class="portfolio-item-img">
               <img src="img/portfolio//thumb/project-1.png" alt="portfolio thumb"
-                data-screenshot="img/portfolio/large/project-1/1.png,img/portfolio/large/project-1/2.png">
+                data-screenshot="img/portfolio/large/project-1/1.png,img/portfolio/large/project-1/2.png,img/portfolio/large/project-1/3.png,img/portfolio/large/project-1/4.png,img/portfolio/large/project-1/5.png">
               <!-- view project btn -->
               <span class="view-project">view project</span>
             </div>
@@ -455,16 +455,19 @@
               <div class="row">
                 <div class="descriptiton">
                   <h3>Project Brief:</h3>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse distinctio ipsa sit minus
-                    voluptatibus vero suscipit maiores odit eveniet dolorem!</p>
+                  <p>This is a website of an event management company named BLUE JAZZ who provides different facilities
+                    in larger exciting music festivals around the world.
+                    users can checkout, give reviews on orders, and pay with "stripe payment gateway".
+                    reviews are displayed dynamically on the home page.
+                    admin can add new services, also can add new admin and see all orders of other customers.</p>
                 </div>
                 <div class="info">
                   <h3>Project info</h3>
                   <ul>
-                    <li>Date - <span>2020</span></li>
-                    <li>Client - <span>xyz</span></li>
+                    <!-- <li>Date - <span>april, 2021</span></li> -->
+                    <li>Client - <span>pet project</span></li>
                     <li>Tools - <span>html, css, javascript</span></li>
-                    <li>Web - <span><a href="#"> www.domain.com</a></span></li>
+                    <li><span><a href="https://bluejazz-2eacf.web.app/">Live Site Link</a></span></li>
                   </ul>
                 </div>
               </div>
@@ -479,7 +482,7 @@
           <div class="portfolio-item-inner outer-shadow">
             <div class="portfolio-item-img">
               <img src="img/portfolio//thumb/project-2.png" alt="portfolio thumb"
-                data-screenshot="img/portfolio/large/project-1/1.png,img/portfolio/large/project-1/2.png">
+                data-screenshot="img/portfolio/large/project-2/1.png,img/portfolio/large/project-2/2.png,img/portfolio/large/project-2/3.png">
               <!-- view project btn -->
               <span class="view-project">view project</span>
             </div>
@@ -489,16 +492,19 @@
               <div class="row">
                 <div class="descriptiton">
                   <h3>Project Brief:</h3>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse distinctio ipsa sit minus
-                    voluptatibus vero suscipit maiores odit eveniet dolorem!</p>
+                  <p>This is a ticket booking website where users can login and book tickets for them and can see
+                    available cars, bikes from fake API.
+                    developers version google map implementation is done.
+                    firebase authentication is implemented.
+                    Bootstrap and custom CSS are used for site responsiveness.</p>
                 </div>
                 <div class="info">
                   <h3>Project info</h3>
                   <ul>
-                    <li>Date - <span>2020</span></li>
+                    <!-- <li>Date - <span>2020</span></li> -->
                     <li>Client - <span>xyz</span></li>
                     <li>Tools - <span>html, css, javascript</span></li>
-                    <li>Web - <span><a href="#"> www.domain.com</a></span></li>
+                    <li><span><a href="https://sad-yalow-c8a063.netlify.app/">Live Site Link</a></span></li>
                   </ul>
                 </div>
               </div>
@@ -513,7 +519,7 @@
           <div class="portfolio-item-inner outer-shadow">
             <div class="portfolio-item-img">
               <img src="img/portfolio//thumb/project-3.png" alt="portfolio thumb"
-                data-screenshot="img/portfolio/large/project-1/1.png,img/portfolio/large/project-1/2.png">
+                data-screenshot="img/portfolio/large/project-3/1.png,img/portfolio/large/project-3/2.png,img/portfolio/large/project-3/3.png,img/portfolio/large/project-3/4.png">
               <!-- view project btn -->
               <span class="view-project">view project</span>
             </div>
@@ -523,16 +529,18 @@
               <div class="row">
                 <div class="descriptiton">
                   <h3>Project Brief:</h3>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse distinctio ipsa sit minus
-                    voluptatibus vero suscipit maiores odit eveniet dolorem!</p>
+                  <p>This is a ecommerce website where daily groceries can be bought and new products can be enlisted.
+                    here users can login using Gmail sign-in by firebase auth and can order new products.
+                    all data are stored in MongoDB real-time database and parsed from node.js backend using API calls.
+                    admin can add or delete products from MongoDb database using the front-end.</p>
                 </div>
                 <div class="info">
                   <h3>Project info</h3>
                   <ul>
-                    <li>Date - <span>2020</span></li>
+                    <!-- <li>Date - <span>2020</span></li> -->
                     <li>Client - <span>xyz</span></li>
                     <li>Tools - <span>html, css, javascript</span></li>
-                    <li>Web - <span><a href="#"> www.domain.com</a></span></li>
+                    <li><span><a href="https://shopup-milestone-10.web.app/">Live Site Link</a></span></li>
                   </ul>
                 </div>
               </div>
@@ -547,7 +555,7 @@
           <div class="portfolio-item-inner outer-shadow">
             <div class="portfolio-item-img">
               <img src="img/portfolio//thumb/project-4.png" alt="portfolio thumb"
-                data-screenshot="img/portfolio/large/project-1/1.png,img/portfolio/large/project-1/2.png">
+                data-screenshot="img/portfolio/large/project-4/1.png,img/portfolio/large/project-4/2.png,img/portfolio/large/project-4/3.png">
               <!-- view project btn -->
               <span class="view-project">view project</span>
             </div>
@@ -557,16 +565,16 @@
               <div class="row">
                 <div class="descriptiton">
                   <h3>Project Brief:</h3>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse distinctio ipsa sit minus
-                    voluptatibus vero suscipit maiores odit eveniet dolorem!</p>
+                  <p>This is a client's project for his books introduction.</p>
                 </div>
                 <div class="info">
                   <h3>Project info</h3>
                   <ul>
-                    <li>Date - <span>2020</span></li>
-                    <li>Client - <span>xyz</span></li>
+                    <!-- <li>Date - <span>2020</span></li> -->
+                    <li>Client - <span>Md Abdur Rahim, Senior Vice President of NBL</span></li>
                     <li>Tools - <span>html, css, javascript</span></li>
-                    <li>Web - <span><a href="#"> www.domain.com</a></span></li>
+                    <li>Web - <span><a href="https://samin1615088.github.io/Bankerer-Hashi/">Live Site Link</a></span>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -592,16 +600,15 @@
               <div class="row">
                 <div class="descriptiton">
                   <h3>Project Brief:</h3>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse distinctio ipsa sit minus
-                    voluptatibus vero suscipit maiores odit eveniet dolorem!</p>
+                  <p>This app "Emergency Numbers Bangladesh" will help you to access all the emergency or important mobile/landline numbers of Bangladesh. Here, in this app, you will get all the important phone numbers of ambulances, police, special forces( RAB), fire brigade, airport, blood bank, railway station, the embassy in Dhaka, etc.</p>
                 </div>
                 <div class="info">
                   <h3>Project info</h3>
                   <ul>
-                    <li>Date - <span>2020</span></li>
-                    <li>Client - <span>xyz</span></li>
+                    <!-- <li>Date - <span>2020</span></li> -->
+                    <li>Client - <span>My Pet Project</span></li>
                     <li>Tools - <span>html, css, javascript</span></li>
-                    <li>Web - <span><a href="#"> www.domain.com</a></span></li>
+                    <li><span><a href="https://play.google.com/store/apps/details?id=com.something.pc.emergencynumbersofbangladesh">Play Store Link</a></span></li>
                   </ul>
                 </div>
               </div>
@@ -615,7 +622,7 @@
           <div class="portfolio-item-inner outer-shadow">
             <div class="portfolio-item-img">
               <img src="img/portfolio//thumb/project-6.png" alt="portfolio thumb"
-                data-screenshot="img/portfolio/large/project-1/1.png,img/portfolio/large/project-1/2.png">
+                data-screenshot="img/portfolio/large/project-6/1.png">
               <!-- view project btn -->
               <span class="view-project">view project</span>
             </div>
@@ -625,16 +632,15 @@
               <div class="row">
                 <div class="descriptiton">
                   <h3>Project Brief:</h3>
-                  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse distinctio ipsa sit minus
-                    voluptatibus vero suscipit maiores odit eveniet dolorem!</p>
+                  <p>I used meal db rest api to parse data and display on frontend.</p>
                 </div>
                 <div class="info">
                   <h3>Project info</h3>
                   <ul>
-                    <li>Date - <span>2020</span></li>
-                    <li>Client - <span>xyz</span></li>
+                    <!-- <li>Date - <span>2020</span></li> -->
+                    <li>Client - <span>My Pet Project</span></li>
                     <li>Tools - <span>html, css, javascript</span></li>
-                    <li>Web - <span><a href="#"> www.domain.com</a></span></li>
+                    <li><span><a href="https://samin1615088.github.io/Cooking-Master--website-milestone-5/">Live Site Link</a></span></li>
                   </ul>
                 </div>
               </div>
