--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@
                 <div class="timeline-item">
                   <div class="timeline-item-inner outer-shadow">
                     <i class="fas fa-graduation-cap icon"></i>
-                    <span>2016 - 2020</span>
-                    <h3>Bachelor of Technology</h3>
-                    <h4>Computer Science & Enginnering</h4>
-                    <p>National Institute of Technology Silchar</p>
+                    <span>2013 - 2015</span>
+                    <h3>Higher Secondary Certificate</h3>
+                    <h4>Science</h4>
+                    <p>Dhaka Residential Model College</p>
                   </div>
                 </div>
                 <!-- timeline item end -->
@@ -311,10 +311,10 @@
                 <div class="timeline-item">
                   <div class="timeline-item-inner outer-shadow">
                     <i class="fas fa-graduation-cap icon"></i>
-                    <span>2016 - 2020</span>
-                    <h3>Bachelor of Technology</h3>
-                    <h4>Computer Science & Enginnering</h4>
-                    <p>National Institute of Technology Silchar</p>
+                    <span>2011 - 2013</span>
+                    <h3>Secondary School Certificate</h3> 
+                    <h4>Science</h4>
+                    <p>Comilla Zilla School</p>
                   </div>
                 </div>
                 <!-- timeline item end -->
