--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                   <div class="timeline-item-inner outer-shadow">
                     <i class="fas fa-graduation-cap icon"></i>
                     <span>2011 - 2013</span>
-                    <h3>Secondary School Certificate</h3> 
+                    <h3>Secondary School Certificate</h3>
                     <h4>Science</h4>
                     <p>Comilla Zilla School</p>
                   </div>
@@ -453,7 +453,7 @@
             <!-- portfolio item details start -->
             <div class="portfolio-item-details">
               <div class="row">
-                <div class="descriptiton">
+                <div class="description">
                   <h3>Project Brief:</h3>
                   <p>This is a website of an event management company named BLUE JAZZ who provides different facilities
                     in larger exciting music festivals around the world.
@@ -490,7 +490,7 @@
             <!-- portfolio item details start -->
             <div class="portfolio-item-details">
               <div class="row">
-                <div class="descriptiton">
+                <div class="description">
                   <h3>Project Brief:</h3>
                   <p>This is a ticket booking website where users can login and book tickets for them and can see
                     available cars, bikes from fake API.
@@ -527,7 +527,7 @@
             <!-- portfolio item details start -->
             <div class="portfolio-item-details">
               <div class="row">
-                <div class="descriptiton">
+                <div class="description">
                   <h3>Project Brief:</h3>
                   <p>This is a ecommerce website where daily groceries can be bought and new products can be enlisted.
                     here users can login using Gmail sign-in by firebase auth and can order new products.
@@ -563,7 +563,7 @@
             <!-- portfolio item details start -->
             <div class="portfolio-item-details">
               <div class="row">
-                <div class="descriptiton">
+                <div class="description">
                   <h3>Project Brief:</h3>
                   <p>This is a client's project for his books introduction.</p>
                 </div>
@@ -598,9 +598,12 @@
             <!-- portfolio item details start -->
             <div class="portfolio-item-details">
               <div class="row">
-                <div class="descriptiton">
+                <div class="description">
                   <h3>Project Brief:</h3>
-                  <p>This app "Emergency Numbers Bangladesh" will help you to access all the emergency or important mobile/landline numbers of Bangladesh. Here, in this app, you will get all the important phone numbers of ambulances, police, special forces( RAB), fire brigade, airport, blood bank, railway station, the embassy in Dhaka, etc.</p>
+                  <p>This app "Emergency Numbers Bangladesh" will help you to access all the emergency or important
+                    mobile/landline numbers of Bangladesh. Here, in this app, you will get all the important phone
+                    numbers of ambulances, police, special forces( RAB), fire brigade, airport, blood bank, railway
+                    station, the embassy in Dhaka, etc.</p>
                 </div>
                 <div class="info">
                   <h3>Project info</h3>
@@ -608,7 +611,9 @@
                     <!-- <li>Date - <span>2020</span></li> -->
                     <li>Client - <span>My Pet Project</span></li>
                     <li>Tools - <span>html, css, javascript</span></li>
-                    <li><span><a href="https://play.google.com/store/apps/details?id=com.something.pc.emergencynumbersofbangladesh">Play Store Link</a></span></li>
+                    <li><span><a
+                          href="https://play.google.com/store/apps/details?id=com.something.pc.emergencynumbersofbangladesh">Play
+                          Store Link</a></span></li>
                   </ul>
                 </div>
               </div>
@@ -630,7 +635,7 @@
             <!-- portfolio item details start -->
             <div class="portfolio-item-details">
               <div class="row">
-                <div class="descriptiton">
+                <div class="description">
                   <h3>Project Brief:</h3>
                   <p>I used meal db rest api to parse data and display on frontend.</p>
                 </div>
@@ -640,7 +645,8 @@
                     <!-- <li>Date - <span>2020</span></li> -->
                     <li>Client - <span>My Pet Project</span></li>
                     <li>Tools - <span>html, css, javascript</span></li>
-                    <li><span><a href="https://samin1615088.github.io/Cooking-Master--website-milestone-5/">Live Site Link</a></span></li>
+                    <li><span><a href="https://samin1615088.github.io/Cooking-Master--website-milestone-5/">Live Site
+                          Link</a></span></li>
                   </ul>
                 </div>
               </div>
