links are updated

--- a/index.html
+++ b/index.html
@@ -467,7 +467,10 @@
                     <!-- <li>Date - <span>april, 2021</span></li> -->
                     <li>Client - <span>pet project</span></li>
                     <li>Tools - <span>html, css, javascript</span></li>
-                    <li><span><a href="https://bluejazz-2eacf.web.app/">Live Site Link</a></span></li>
+                    <li><i class="fab fa-github"></i> <span><a
+                          href="https://github.com/Samin1615088/blue-jazz-frontend">Github</a></span></li>
+                    <li><i class="far fa-window-maximize"></i> <span><a href="https://bluejazz-2eacf.web.app/">Live
+                          Site</a></span></li>
                   </ul>
                 </div>
               </div>
@@ -504,7 +507,11 @@
                     <!-- <li>Date - <span>2020</span></li> -->
                     <li>Client - <span>xyz</span></li>
                     <li>Tools - <span>html, css, javascript</span></li>
-                    <li><span><a href="https://sad-yalow-c8a063.netlify.app/">Live Site Link</a></span></li>
+                    <li><i class="fab fa-github"></i> <span><a
+                          href="https://github.com/Samin1615088/dhaka-city-mass-transportation-portal-9">Github</a></span>
+                    </li>
+                    <li><i class="far fa-window-maximize"></i> <span><a
+                          href="https://sad-yalow-c8a063.netlify.app/">Live Site</a></span></li>
                   </ul>
                 </div>
               </div>
@@ -540,7 +547,10 @@
                     <!-- <li>Date - <span>2020</span></li> -->
                     <li>Client - <span>xyz</span></li>
                     <li>Tools - <span>html, css, javascript</span></li>
-                    <li><span><a href="https://shopup-milestone-10.web.app/">Live Site Link</a></span></li>
+                    <li><i class="fab fa-github"></i> <span><a
+                          href="https://github.com/Samin1615088/shopUp-ecommerce">Github</a></span></li>
+                    <li><i class="far fa-window-maximize"></i> <span><a href="https://shopup-milestone-10.web.app/">Live
+                          Site</a></span></li>
                   </ul>
                 </div>
               </div>
@@ -573,8 +583,10 @@
                     <!-- <li>Date - <span>2020</span></li> -->
                     <li>Client - <span>Md Abdur Rahim, Senior Vice President of NBL</span></li>
                     <li>Tools - <span>html, css, javascript</span></li>
-                    <li>Web - <span><a href="https://samin1615088.github.io/Bankerer-Hashi/">Live Site Link</a></span>
-                    </li>
+                    <li><i class="fab fa-github"></i> <span><a
+                          href="https://samin1615088.github.io/Bankerer-Hashi/">Github</a></span></li>
+                    <li><i class="far fa-window-maximize"></i> <span><a
+                          href="https://samin1615088.github.io/Bankerer-Hashi/">Live Site</a></span></li>
                   </ul>
                 </div>
               </div>
@@ -611,9 +623,9 @@
                     <!-- <li>Date - <span>2020</span></li> -->
                     <li>Client - <span>My Pet Project</span></li>
                     <li>Tools - <span>html, css, javascript</span></li>
-                    <li><span><a
+                    <li><i class="fab fa-google-play"></i> <span><a
                           href="https://play.google.com/store/apps/details?id=com.something.pc.emergencynumbersofbangladesh">Play
-                          Store Link</a></span></li>
+                          Store</a></span></li>
                   </ul>
                 </div>
               </div>
@@ -645,8 +657,12 @@
                     <!-- <li>Date - <span>2020</span></li> -->
                     <li>Client - <span>My Pet Project</span></li>
                     <li>Tools - <span>html, css, javascript</span></li>
-                    <li><span><a href="https://samin1615088.github.io/Cooking-Master--website-milestone-5/">Live Site
-                          Link</a></span></li>
+                    <li><i class="fab fa-github"></i> <span><a
+                          href="https://github.com/Samin1615088/Cooking-Master--website-milestone-5">Github</a></span>
+                    </li>
+                    <li><i class="far fa-window-maximize"></i> <span><a
+                          href="https://samin1615088.github.io/Cooking-Master--website-milestone-5/">Live
+                          Site</a></span></li>
                   </ul>
                 </div>
               </div>
