--- a/index.html
+++ b/index.html
@@ -466,7 +466,8 @@
                   <ul>
                     <!-- <li>Date - <span>april, 2021</span></li> -->
                     <li>Client - <span>pet project</span></li>
-                    <li>Tools - <span>html, css, javascript</span></li>
+                    <li>Frontend - <span>React.js, React-router, Bootstrap, FontAwesome, React-form-hook </span></li>
+                    <li>Backend - <span>Mongodb, Express.js, Firebase</span></li>
                     <li><i class="fab fa-github"></i> <span><a
                           href="https://github.com/Samin1615088/blue-jazz-frontend">Github</a></span></li>
                     <li><i class="far fa-window-maximize"></i> <span><a href="https://bluejazz-2eacf.web.app/">Live
@@ -505,8 +506,9 @@
                   <h3>Project info</h3>
                   <ul>
                     <!-- <li>Date - <span>2020</span></li> -->
-                    <li>Client - <span>xyz</span></li>
-                    <li>Tools - <span>html, css, javascript</span></li>
+                    <li>Client - <span>Pet Project</span></li>
+                    <li>Frontend - <span>React.js, React-router, Bootstrap, FontAwesome, React-form-hook </span></li>
+                    <li>Backend - <span>Mongodb, Express.js, Firebase</span></li>
                     <li><i class="fab fa-github"></i> <span><a
                           href="https://github.com/Samin1615088/dhaka-city-mass-transportation-portal-9">Github</a></span>
                     </li>
@@ -545,8 +547,9 @@
                   <h3>Project info</h3>
                   <ul>
                     <!-- <li>Date - <span>2020</span></li> -->
-                    <li>Client - <span>xyz</span></li>
-                    <li>Tools - <span>html, css, javascript</span></li>
+                    <li>Client - <span>Pet Project</span></li>
+                    <li>Frontend - <span>React.js, React Private Route, Firebase Auth, Bootstrap, FontAwesome</span>
+                    </li>
                     <li><i class="fab fa-github"></i> <span><a
                           href="https://github.com/Samin1615088/shopUp-ecommerce">Github</a></span></li>
                     <li><i class="far fa-window-maximize"></i> <span><a href="https://shopup-milestone-10.web.app/">Live
@@ -582,7 +585,7 @@
                   <ul>
                     <!-- <li>Date - <span>2020</span></li> -->
                     <li>Client - <span>Md Abdur Rahim, Senior Vice President of NBL</span></li>
-                    <li>Tools - <span>html, css, javascript</span></li>
+                    <li>Frontend - <span>Bootstrap, FontAwesome, Google Fonts</span></li>
                     <li><i class="fab fa-github"></i> <span><a
                           href="https://samin1615088.github.io/Bankerer-Hashi/">Github</a></span></li>
                     <li><i class="far fa-window-maximize"></i> <span><a
@@ -622,8 +625,8 @@
                   <ul>
                     <!-- <li>Date - <span>2020</span></li> -->
                     <li>Client - <span>My Pet Project</span></li>
-                    <li>Tools - <span>html, css, javascript</span></li>
-                    <li><i class="fab fa-google-play"></i> <span><a
+                    <li>Technology - <span>Java, Native Android, Flat Icon</span></li>
+                    <li><i class="fab fa-google-play"></i> <span> <a
                           href="https://play.google.com/store/apps/details?id=com.something.pc.emergencynumbersofbangladesh">Play
                           Store</a></span></li>
                   </ul>
@@ -656,7 +659,7 @@
                   <ul>
                     <!-- <li>Date - <span>2020</span></li> -->
                     <li>Client - <span>My Pet Project</span></li>
-                    <li>Tools - <span>html, css, javascript</span></li>
+                    <li>Frontend - <span>html, css, javascript, rest api</span></li>
                     <li><i class="fab fa-github"></i> <span><a
                           href="https://github.com/Samin1615088/Cooking-Master--website-milestone-5">Github</a></span>
                     </li>
@@ -699,9 +702,9 @@
             <div class="info">
               <h3>Project info</h3>
               <ul>
-                <li>Date - <span>2020</span></li>
-                <li>Client - <span>xyz</span></li>
-                <li>Tools - <span>html, css, javascript</span></li>
+                <!-- <li>Date - <span>2020</span></li> -->
+                <li>Client - <span>Pet Project</span></li>
+                <li>Technology - <span>html, css, javascript</span></li>
                 <li>Web - <span><a href="#"> www.domain.com</a></span></li>
               </ul>
             </div>
