--- a/index.html
+++ b/index.html
@@ -465,9 +465,13 @@
                   <h3>Project info</h3>
                   <ul>
                     <!-- <li>Date - <span>april, 2021</span></li> -->
-                    <li>Client - <span>pet project</span></li>
-                    <li>Frontend - <span>React.js, React-router, Bootstrap, FontAwesome, React-form-hook </span></li>
-                    <li>Backend - <span>Mongodb, Express.js, Firebase</span></li>
+                    <li><span class="tag-1">Client</span> - <span>pet project</span></li>
+                    <li><span class="tag-1">Frontend</span> -
+                      <span>React.js, React-router, Bootstrap, FontAwesome,
+                        React-form-hook </span>
+                        
+                    </li>
+                    <li><span class="tag-1">Backend</span> - <span>Mongodb, Express.js, Firebase</span></li>
                     <li><i class="fab fa-github"></i> <span><a
                           href="https://github.com/Samin1615088/blue-jazz-frontend">Github</a></span></li>
                     <li><i class="far fa-window-maximize"></i> <span><a href="https://bluejazz-2eacf.web.app/">Live
@@ -506,9 +510,10 @@
                   <h3>Project info</h3>
                   <ul>
                     <!-- <li>Date - <span>2020</span></li> -->
-                    <li>Client - <span>Pet Project</span></li>
-                    <li>Frontend - <span>React.js, React-router, Bootstrap, FontAwesome, React-form-hook </span></li>
-                    <li>Backend - <span>Mongodb, Express.js, Firebase</span></li>
+                    <li><span class="tag-1">Client</span> - <span>Pet Project</span></li>
+                    <li><span class="tag-1">Frontend</span> - <span>React.js, React-router, Bootstrap, FontAwesome,
+                        React-form-hook </span></li>
+                    <li><span class="tag-1">Backend</span> - <span>Mongodb, Express.js, Firebase</span></li>
                     <li><i class="fab fa-github"></i> <span><a
                           href="https://github.com/Samin1615088/dhaka-city-mass-transportation-portal-9">Github</a></span>
                     </li>
@@ -547,8 +552,10 @@
                   <h3>Project info</h3>
                   <ul>
                     <!-- <li>Date - <span>2020</span></li> -->
-                    <li>Client - <span>Pet Project</span></li>
-                    <li>Frontend - <span>React.js, React Private Route, Firebase Auth, Bootstrap, FontAwesome</span>
+                    <li><span class="tag-1">Client</span> - <span>Pet Project</span></li>
+                    <li><span class="tag-1">Frontend</span> - <span>React.js, React Private Route, Firebase Auth,
+                        Bootstrap,
+                        FontAwesome</span>
                     </li>
                     <li><i class="fab fa-github"></i> <span><a
                           href="https://github.com/Samin1615088/shopUp-ecommerce">Github</a></span></li>
@@ -584,8 +591,9 @@
                   <h3>Project info</h3>
                   <ul>
                     <!-- <li>Date - <span>2020</span></li> -->
-                    <li>Client - <span>Md Abdur Rahim, Senior Vice President of NBL</span></li>
-                    <li>Frontend - <span>Bootstrap, FontAwesome, Google Fonts</span></li>
+                    <li><span class="tag-1"></span>Client</span> - <span>Md Abdur Rahim, Senior Vice President of
+                        NBL</span></li>
+                    <li><span class="tag-1">Frontend</span> - <span>Bootstrap, FontAwesome, Google Fonts</span></li>
                     <li><i class="fab fa-github"></i> <span><a
                           href="https://samin1615088.github.io/Bankerer-Hashi/">Github</a></span></li>
                     <li><i class="far fa-window-maximize"></i> <span><a
@@ -624,7 +632,7 @@
                   <h3>Project info</h3>
                   <ul>
                     <!-- <li>Date - <span>2020</span></li> -->
-                    <li>Client - <span>My Pet Project</span></li>
+                    <li><span class="tag-1">Client</span> - <span>My Pet Project</span></li>
                     <li>Technology - <span>Java, Native Android, Flat Icon</span></li>
                     <li><i class="fab fa-google-play"></i> <span> <a
                           href="https://play.google.com/store/apps/details?id=com.something.pc.emergencynumbersofbangladesh">Play
@@ -658,8 +666,8 @@
                   <h3>Project info</h3>
                   <ul>
                     <!-- <li>Date - <span>2020</span></li> -->
-                    <li>Client - <span>My Pet Project</span></li>
-                    <li>Frontend - <span>html, css, javascript, rest api</span></li>
+                    <li><span class="tag-1">Client</span> - <span>My Pet Project</span></li>
+                    <li><span class="tag-1">Frontend</span> - <span>html, css, javascript, rest api</span></li>
                     <li><i class="fab fa-github"></i> <span><a
                           href="https://github.com/Samin1615088/Cooking-Master--website-milestone-5">Github</a></span>
                     </li>
